# ftl_maker

./: .gitignore  CMakeLists.txt  README.md  build.sh  en-US.ftl  run.sh
.github/workflows/: linux.yml  mac.yml  windows.yml
debian/: README.Debian.ex  README.source.ex  changelog  control  copyright  ftl-maker.cron.d.ex  ftl-maker.doc-base.ex  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/upstream.ex/: metadata.ex
i18n/: en-US.ftl  th-TH.ftl
i18n/af-ZA/: app.ftl
i18n/am-ET/: app.ftl
i18n/ar-SA/: app.ftl
i18n/az-AZ/: app.ftl
i18n/be-BY/: app.ftl
i18n/bn-BD/: app.ftl
i18n/eu-ES/: app.ftl
i18n/hy-AM/: app.ftl
i18n/sq-AL/: app.ftl
make_deb/: README.md
src/: ftl_maker.c  lib.c  lib.h  t.c
